# ImageProcessor

./: CMakeLists.txt  README.md  censorship.cpp  crop.cpp  edge_detection.cpp  filters.cpp  filters.h  gaussian_blur.cpp  grayscale.cpp  image.cpp  image.h  image_processor.cpp  negative.cpp  sharpening.cpp  test.cpp
